--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="parallax-container">
-        <div class="parallax"><img src="parallax1.jpg"></div>
+        <div class="parallax"><img src="img/shopsPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
@@ -27,32 +27,32 @@
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
-                            <span class="card-title">McDoolands</span>
-                            <p>Burgers, McDoobies, and Fries!</p>
+                            <span class="card-title">McDonald's</span>
+                            <p>Burgers, Fries, Chicken Nuggets.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
-                            <span class="card-title">King Joint Burger</span>
-                            <p>Burgers, McDoobies, and Fries!</p>
+                            <span class="card-title">Burger King</span>
+                            <p>Burgers, Chicken Nuggets, Fries.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m3" style="display: inline-block">
                     <div class="card grey lighten-3 hoverable">
                         <div class="card-content">
-                            <span class="card-title">Morgan's Coffee</span>
-                            <p>Coffee, cofee, and mroe coffe</p>
+                            <span class="card-title">L&L Barbecue</span>
+                            <p>Musubi, Loco Moco, Barbecue.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m3" style="display: inline-block">
                     <div class="card grey lighten-3 hoverable">
                         <div class="card-content">
-                            <span class="card-title">Dillon's Dispensary</span>
-                            <p>Dispenses stuff.</p>
+                            <span class="card-title">Foodland and KTA</span>
+                            <p>Order anything from the store.</p>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="parallax-container">
-        <div class="parallax"><img src="parallax2.jpg"></div>
+        <div class="parallax"><img src="img/shopPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
@@ -76,25 +76,34 @@
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
-                            <span class="card-title">Lettuce</span>
+                            <span class="card-title">Leafy Greens</span>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
-                            <span class="card-title">Milk Cookies</span>
+                            <span class="card-title">Mint Oreo Cookies</span>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
-                            <span class="card-title">Chips</span></div>
+                            <span class="card-title">Arizona Green Tea</span></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="parallax-container">
-        <div class="parallax"><img src="lastimage.jpg"></div>
+        <div class="parallax"><img src="img/checkoutPhone.png"></div>
+    </div>
+    <div class="section white">
+        <div class="row container center">
+            <h2>Get SwoopIt now!</h2>
+            <img src="img/google-play-badge.png" style="width: 200px; height: 75px;">
+            <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px;">
+        </div>
+    </div>
+</main>
