--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,9 @@
 <main>
-    <div class="section">
-        <div class="headest" style="width: 100%; height: 200px; margin-top: -15px">
-            <div class="container center">
-                <img src="img/swoop_trans.png" style="width: 200px; height: 200px;">
-            </div>
+    <div class="parallax-container">
+        <div class="container center">
+            <img src="img/swoop_trans.png" style="width: 200px; height: 200px;">
         </div>
+        <div class="parallax"><img src="img/topPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
