--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,10 +15,10 @@
 
 #style-6::-webkit-scrollbar-thumb
 {
-    background-color: #00d886;  }
+    background-color: #1CAEEE;  }
 
 .parallax-container {
-    height: 350px !important;
+    height: 475px !important;
 }
 
 body {
