--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <main>
-    <div class="parallax-container">
+    <div class="parallax-container hide-on-med-and-down">
         <div class="parallax"><img src="img/topPhone.png"></div>
     </div>
     <div class="section white">
@@ -13,12 +13,13 @@
             <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px;">
         </div>
     </div>
-    <div class="parallax-container">
+    <div class="parallax-container hide-on-med-and-down">
         <div class="parallax"><img src="img/shopsPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
-            <h2 class="header">Order anything from our selection of restaurants.</h2>
+            <h2 class="header hide-on-med-and-down">Order anything from our selection of restaurants.</h2>
+            <h2 class="header hide-on-med-and-up">Order from Restaurants</h2>
             <div class="row">
                 <div class="col s12 m3">
                     <div class="card grey lighten-3 hoverable" style="display: inline-block">
@@ -55,12 +56,13 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container">
+    <div class="parallax-container hide-on-med-and-down">
         <div class="parallax"><img src="img/shopPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
-            <h2 class="header">Custom order from your local grocery store</h2>
+            <h2 class="header hide-on-med-and-down">Custom order from your local grocery store</h2>
+            <h2 class="header hide-on-med-and-up">Custom Groceries</h2>
             <div class="row">
                 <div class="col s12 m3">
                     <div class="card grey lighten-3" style="display: inline-block">
@@ -92,12 +94,12 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container">
+    <div class="parallax-container hide-on-med-and-down">
         <div class="parallax"><img src="img/checkoutPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
-            <h2>Get SwoopIt now!</h2>
+            <h2>Get SwoopIt</h2>
             <img src="img/google-play-badge.png" style="width: 200px; height: 75px;">
             <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px;">
         </div>
