added play store link

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
                 delivered right to your door!</p>
         </div>
         <div class="row container center">
-            <img src="img/google-play-badge.png" style="width: 200px; height: 75px;">
+            <img src="img/google-play-badge.png" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 200px; height: 75px;">
             <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px;">
         </div>
     </div>
