--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
     <title>SwoopIt</title>
-
+    <!-- Search Engine -->
+    <meta name="description" content="Food delivery for schools.">
+    <meta name="image" content="https://swoopit.xyz/favicon.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="SwoopIt">
+    <meta itemprop="description" content="Food delivery for schools.">
+    <meta itemprop="image" content="https://swoopit.xyz/favicon.png">
+    <!-- Mobile App for iOS & Android -->
+    <meta name="google-play-app" content="app-id=com.swoopit.android">
+    <!-- OpenGraph Tags -->
+    <meta name="og:title" content="SwoopIt"/>
+    <meta name="og:type" content="app"/>
+    <meta name="og:url" content="https://swoopit.xyz"/>
+    <meta name="og:image" content="https://swoopit.xyz/favicon.png"/>
+    <meta name="og:site_name" content="SwoopIt"/>
+    <meta name="og:description" content="Food delivery for schools"/>
     <!-- Stylesheets -->
     <link rel="shortcut icon" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
