--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,6 +22,7 @@
     <meta name="og:image" content="https://swoopit.xyz/favicon.png"/>
     <meta name="og:site_name" content="SwoopIt"/>
     <meta name="og:description" content="Food delivery for schools"/>
+    <meta name="theme-color" content="#1caeee"/>
     <!-- Stylesheets -->
     <link rel="shortcut icon" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -65,8 +66,8 @@
     </div>
 </footer>
 <!-- Javascript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script async defer type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script async defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 <script>
     $(document).ready(function () {
