--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- COMMON TAGS -->
-    <meta charset="utf-8">
     <title>SwoopIt</title>
     <!-- Search Engine -->
     <meta name="description" content="Food delivery for schools.">
@@ -13,7 +12,7 @@
     <meta itemprop="name" content="SwoopIt">
     <meta itemprop="description" content="Food delivery for schools.">
     <meta itemprop="image" content="https://swoopit.xyz/favicon.png">
-    <!-- Mobile App for iOS & Android -->
+    <!-- Mobile App for Android -->
     <meta name="google-play-app" content="app-id=com.swoopit.android">
     <!-- OpenGraph Tags -->
     <meta name="og:title" content="SwoopIt"/>
@@ -23,8 +22,17 @@
     <meta name="og:site_name" content="SwoopIt"/>
     <meta name="og:description" content="Food delivery for schools"/>
     <meta name="theme-color" content="#1caeee"/>
+    <!-- Google -->
+    <link rel="icon" href="favicon.png">
+    <!-- Apple -->
+    <link rel="apple-touch-icon" href="favicon.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- TODO: publish to the app store
+    <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
+    -->
     <!-- Stylesheets -->
     <link rel="shortcut icon" href="favicon.png">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <style>
