--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="parallax-container hide-on-med-and-down">
-        <div class="parallax"><img src="img/topPhone.png"></div>
+        <div class="parallax"><img alt="SwoopIt Splash" src="img/topPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
@@ -9,12 +9,12 @@
                 delivered right to your door!</p>
         </div>
         <div class="row container center">
-            <img src="img/google-play-badge.png" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 200px; height: 75px; cursor: pointer">
-            <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px; cursor: pointer">
+            <img src="img/google-play-badge.png" alt="Google Play" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 200px; height: 75px; cursor: pointer">
+            <img src="img/app-store-badge.svg" alt="App Store" style="width: 200px; height: 75px; padding: 11px; cursor: pointer">
         </div>
     </div>
     <div class="parallax-container hide-on-med-and-down">
-        <div class="parallax"><img src="img/shopsPhone.png"></div>
+        <div class="parallax"><img alt="SwoopIt Shops" src="img/shopsPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="parallax-container hide-on-med-and-down">
-        <div class="parallax"><img src="img/shopPhone.png"></div>
+        <div class="parallax"><img alt="SwoopIt Shop" src="img/shopPhone.png"></div>
     </div>
     <div class="section white">
         <div class="row container center">
@@ -95,13 +95,13 @@
         </div>
     </div>
     <div class="parallax-container hide-on-med-and-down">
-        <div class="parallax"><img src="img/checkoutPhone.png"></div>
+        <div class="parallax"><img src="img/checkoutPhone.png" alt="SwoopIt Checkout"></div>
     </div>
     <div class="section white">
         <div class="row container center">
             <h2>Get SwoopIt</h2>
-            <img src="img/google-play-badge.png" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 200px; height: 75px; cursor: pointer">
-            <img src="img/app-store-badge.svg" style="width: 200px; height: 75px; padding: 11px; cursor: pointer">
+            <img src="img/google-play-badge.png" alt="Google Play" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 200px; height: 75px; cursor: pointer">
+            <img src="img/app-store-badge.svg" alt="App Store" style="width: 200px; height: 75px; padding: 11px; cursor: pointer">
         </div>
     </div>
 </main>
