--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -43,26 +43,26 @@
 <div class="navbar-fixed z-depth-0">
     <nav class="blue z-depth-0">
         <div class="nav-wrapper">
-            <a class="center brand-logo">SwoopIt</a>
+            <a class="center brand-logo text-darken-1">SwoopIt</a>
         </div>
     </nav>
 </div>
 
 {{{body}}}
-<footer class="page-footer blue darken-1">
+<footer class="page-footer blue darken-2">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">SwoopIt</h5>
-                <p class="grey-text text-lighten-4">Website by Morgan Dean</p>
+                <p class="white-text">Website by Morgan Dean</p>
             </div>
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Email</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    <li><a class="white-text" href="#!">Email</a></li>
+                    <li><a class="white-text" href="#!">Link 2</a></li>
+                    <li><a class="white-text" href="#!">Link 3</a></li>
+                    <li><a class="white-text" href="#!">Link 4</a></li>
                 </ul>
             </div>
         </div>
@@ -77,7 +77,7 @@
 <script async defer type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-<script>
+<script async defer>
     $(document).ready(function () {
         $('.parallax').parallax();
     });
