added SEO and manifest stuf

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -74,10 +74,10 @@
     </div>
 </footer>
 <!-- Javascript -->
-<script async defer type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script async defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-<script async defer>
+<script>
     $(document).ready(function () {
         $('.parallax').parallax();
     });
