--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -41,7 +41,7 @@
 </head>
 <body id="style-6">
 <div class="navbar-fixed z-depth-0">
-    <nav class="blue z-depth-0">
+    <nav class="blue darken-1 z-depth-0">
         <div class="nav-wrapper">
             <a class="center brand-logo text-darken-1">SwoopIt</a>
         </div>
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container">
+        <div class="container" style="font-weight: normal">
             © 2017 SwoopIt
         </div>
     </div>
