--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,7 +15,7 @@
 
 #style-6::-webkit-scrollbar-thumb
 {
-    background-color: #1CAEEE;  }
+    background-color: #1e88e5;  }
 
 .parallax-container {
     height: 475px !important;
