--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- COMMON TAGS -->
-    <title>SwoopIt</title>
+    <title>{{{title}}}</title>
     <!-- Search Engine -->
     <meta name="description" content="Food delivery for schools.">
     <meta name="image" content="https://swoopit.xyz/favicon.png">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="SwoopIt">
+    <meta itemprop="name" content="{{{title}}}">
     <meta itemprop="description" content="Food delivery for schools.">
     <meta itemprop="image" content="https://swoopit.xyz/favicon.png">
     <!-- Mobile App for Android -->
     <meta name="google-play-app" content="app-id=com.swoopit.android">
     <!-- OpenGraph Tags -->
-    <meta name="og:title" content="SwoopIt"/>
+    <meta name="og:title" content="{{{title}}}"/>
     <meta name="og:type" content="app"/>
     <meta name="og:url" content="https://swoopit.xyz"/>
     <meta name="og:image" content="https://swoopit.xyz/favicon.png"/>
@@ -43,7 +43,7 @@
 <div class="navbar-fixed z-depth-0">
     <nav class="blue darken-1 z-depth-0">
         <div class="nav-wrapper">
-            <a class="center brand-logo text-darken-1">SwoopIt</a>
+            <a class="center brand-logo text-darken-1">{{{title}}}</a>
         </div>
     </nav>
 </div>
@@ -59,7 +59,7 @@
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">Email</a></li>
+                    <li><a class="white-text" href="admin">Admin Console</a></li>
                     <li><a class="white-text" href="#!">Link 2</a></li>
                     <li><a class="white-text" href="#!">Link 3</a></li>
                     <li><a class="white-text" href="#!">Link 4</a></li>
@@ -76,10 +76,13 @@
 <!-- Javascript -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
+<img src="small.png" style="display: none">
 <script>
     $(document).ready(function () {
         $('.parallax').parallax();
+        if (window.location.pathname != '/') {
+        	$('body').css('background', '#f9f9f9')
+        }
     });
 </script>
 </body>
