--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,35 +1,64 @@
-
-    <div class="row" style="margin-bottom: 20px; margin-top: 20px">
-        <div class="col s2" style="margin-left: 20px;">
-            <ul>
-                <li><h3>Menu</h3></li>
-                <li class="divider"></li>
-            </ul>
-            <div class="collection">
-                <a href="#" class="collection-item active blue-text">Admin Home</a>
-                <a href="item" class="collection-item blue-text">Add Items</a>
-                <a href="items" class="collection-item blue-text">Remove Items</a>
-                <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
-                <a href="/" class="collection-item blue-text">Sign Out</a>
-            </div>
+<div class="row" style="margin-bottom: 20px; margin-top: 20px">
+    <div class="col s2" style="margin-left: 20px;">
+        <ul>
+            <li><h3>Menu</h3></li>
+        </ul>
+        <div class="collection">
+            <a href="#" class="collection-item active-col blue-text">Admin Home</a>
+            <a href="item" class="collection-item blue-text">Add Items</a>
+            <a href="items" class="collection-item blue-text">Remove Items</a>
+            <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
+            <a href="/" class="collection-item blue-text">Sign Out</a>
         </div>
-        <div class="col s8 container" style="margin-top: -11px">
-            <div class="center">
-                <h3>Statistics</h3>
-            </div>
-            <div class="row">
-                <div class="col s12 m6">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title">Total Users</span>
-                            <p>100 with hpa.edu emails</p>
-                            <p>10 with other emails</p>
+    </div>
+    <div class="col s8 container" style="margin-top: -7px">
+        <div class="center">
+            <h3>Statistics</h3>
+        </div>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Users</span>
+                        <div id="piechart" style="width: 400px; height: 250px;">
+                            <div class="center">
+                                <div class="preloader-wrapper big active">
+                                    <div class="spinner-layer spinner-blue white">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div>
+                                        <div class="gap-patch">
+                                            <div class="circle"></div>
+                                        </div>
+                                        <div class="circle-clipper right">
+                                            <div class="circle"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-action">
-                            <a href="blacklist">Manage Users</a>
+                            <a href="blacklist" class="blue-text btn-flat waves-effect waves-light">Manage Users</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Money</span>
+                        <ul class="collection">
+                            <li class="collection-item" id="total-items"><b>Revenue:</b> $1123123.23</li>
+                            <li class="collection-item" id="items-under"><b>Costs:</b> $131.98</li>
+                            <li class="collection-item" id="total-items"><b>Profit:</b> $0.35</li>
+                        </ul>
+                        <div class="card-action">
+                            <a href="item" class="blue-text btn-flat waves-effect waves-light">Add Item</a>
+                            <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
