now admins can add categories and items

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -5,8 +5,10 @@
         </ul>
         <div class="collection">
             <a href="#" class="collection-item active-col blue-text">Admin Home</a>
-            <a href="item" class="collection-item blue-text">Add Items</a>
-            <a href="items" class="collection-item blue-text">Remove Items</a>
+            <a href="item" class="collection-item blue-text">Add Item</a>
+            <a href="category" class="collection-item blue-text">Add Category</a>
+            <a href="items" class="collection-item blue-text">Items</a>
+            <a href="categories" class="collection-item blue-text">Categories</a>
             <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
             <a href="/" class="collection-item blue-text">Sign Out</a>
         </div>
