--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -64,8 +64,8 @@
                     <li><a class="white-text" href="login">Login</a></li>
                     <li><a class="white-text" href="privacypolicy.html">Privacy Policy</a></li>
                     <li><br></li>
-                    <li><a class="white-text" >Contact Us at swoopitapp@gmail.com</a></li>
-                    <li><a class="white-text" >Under no circumstances will we offer refunds</a></li>
+                    <li><a class="white-text">Contact Us at swoopitapp@gmail.com</a></li>
+                    <li><a class="white-text">Under no circumstances will we offer refunds</a></li>
                 </ul>
             </div>
         </div>
@@ -73,7 +73,7 @@
     <div class="footer-copyright">
         <div class="container" style="font-weight: normal">
             <ul>
-                <li><a class="white-text" >© 2018 SwoopIt</a></li>
+                <li><a class="white-text">© 2018 SwoopIt</a></li>
             </ul>
         </div>
     </div>
@@ -93,10 +93,13 @@
     $(document).ready(function () {
         $('.parallax').parallax();
         if (window.location.pathname !== '/') {
-            $('body').css('background', '#f9f9f9')
+            $('body').css('background', '#f9f9f9');
+            gapi.load('auth2', function () {
+                gapi.auth2.init({client_id: '396697495271-ol2niqtfo75sbd27mit9d13r74v63ffo.apps.googleusercontent.com'});
+            });
         }
         if (window.location.pathname === 'admin') {
-            google.charts.load('current', {'packages':['corechart']});
+            google.charts.load('current', {'packages': ['corechart']});
             google.charts.setOnLoadCallback(drawChart);
         }
     });
