now admins can add categories and items

--- a/views/category.hbs
+++ b/views/category.hbs
@@ -16,7 +16,7 @@
 
     <div class="container col s8" style="margin-left: 10px">
         <div class="row center">
-            <h3>Add Item</h3>
+            <h3>Add Category</h3>
             <form onsubmit="return false">
                 <div class="row">
                     <div class="input-field col s6">
