udpated for app store!

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -48,15 +48,11 @@
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">Money</span>
-                        <ul class="collection">
-                            <li class="collection-item" id="total-items"><b>Revenue:</b> $1123123.23</li>
-                            <li class="collection-item" id="items-under"><b>Costs:</b> $131.98</li>
-                            <li class="collection-item" id="total-items"><b>Profit:</b> $0.35</li>
-                        </ul>
+                        <span class="card-title">Devices</span>
+                        <h5>Android</h5>
+                        <h5>iOS</h5>
                         <div class="card-action">
-                            <a href="item" class="blue-text btn-flat waves-effect waves-light">Add Item</a>
-                            <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
+                            <a href="blacklist" class="blue-text btn-flat waves-effect waves-light">Manage Users</a>
                         </div>
                     </div>
                 </div>
