--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
         </div>
         <div class="row container center">
             <img src="img/google-play-badge.svg" alt="Google Play" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 179.535px; height: 60px; cursor: pointer">
-            <img src="img/app-store-badge.svg" alt="App Store" style="width: 179.535px; height: 60px; padding: 2px; cursor: pointer">
+            <img src="img/app-store-badge.svg" onclick="window.location.href = 'https://itunes.apple.com/us/app/swoopit/id1382417440?mt=8'" alt="App Store" style="width: 179.535px; height: 60px; padding: 2px; cursor: pointer">
         </div>
     </div>
     <div class="parallax-container hide-on-med-and-down">
@@ -101,7 +101,7 @@
         <div class="row container center">
             <h2>Get SwoopIt</h2>
             <img src="img/google-play-badge.svg" alt="Google Play" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 179.535px; height: 60px; cursor: pointer">
-            <img src="img/app-store-badge.svg" alt="App Store" style="width: 179.535px; height: 60px; padding: 2px; cursor: pointer">
+            <img src="img/app-store-badge.svg" onclick="window.location.href = 'https://itunes.apple.com/us/app/swoopit/id1382417440?mt=8'" alt="App Store" style="width: 179.535px; height: 60px; padding: 2px; cursor: pointer">
         </div>
     </div>
 </main>
