--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -3,8 +3,8 @@
     <li><a href="admin" class="black-text">Admin Home</a></li>
     <li><a href="item" class="black-text">Add Item</a></li>
     <li><a href="category" class="black-text">Add Category</a></li>
-    <li><a href="items" class="black-text active-col">Items</a></li>
-    <li><a href="categories" class="black-text">Categories</a></li>
+    <li><a href="items" class="black-text">Items</a></li>
+    <li><a class="black-text active-col">Categories</a></li>
     <li><a href="blacklist" class="black-text">Blacklist Users</a></li>
     <li><a href="/" class="blue-text">Sign Out</a></li>
 </ul>
@@ -14,11 +14,11 @@
             <li><h3>Menu</h3></li>
         </ul>
         <div class="collection">
-            <a class="collection-item blue-text">Admin Home</a>
+            <a href="admin" class="collection-item blue-text">Admin Home</a>
             <a href="item" class="collection-item blue-text">Add Item</a>
             <a href="category" class="collection-item blue-text">Add Category</a>
-            <a href="items" class="collection-item blue-text active-col">Items</a>
-            <a href="categories" class="collection-item blue-text">Categories</a>
+            <a href="items" class="collection-item blue-tex">Items</a>
+            <a class="collection-item active-col blue-text">Categories</a>
             <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
             <a href="/" class="collection-item blue-text">Sign Out</a>
         </div>
