--- a/views/item.hbs
+++ b/views/item.hbs
@@ -4,8 +4,8 @@
             <li><h3>Menu</h3></li>
         </ul>
         <div class="collection">
-            <a href="#" class="collection-item blue-text">Admin Home</a>
-            <a href="item" class="collection-item active-col blue-text">Add Item</a>
+            <a href="admin" class="collection-item blue-text">Admin Home</a>
+            <a class="collection-item active-col blue-text">Add Item</a>
             <a href="category" class="collection-item blue-text">Add Category</a>
             <a href="items" class="collection-item blue-text">Items</a>
             <a href="categories" class="collection-item blue-text">Categories</a>
