--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,10 +1,20 @@
+<ul id="slide-out" class="sidenav show-on-med-and-down">
+    <li><h4 class="center">SwoopIt</h4></li>
+    <li><a class="black-text active-col">Admin Home</a></li>
+    <li><a href="item" class="black-text">Add Item</a></li>
+    <li><a href="category" class="black-text">Add Category</a></li>
+    <li><a href="items" class="black-text">Items</a></li>
+    <li><a class="black-text">Categories</a></li>
+    <li><a href="blacklist" class="black-text">Blacklist Users</a></li>
+    <li><a href="/" class="blue-text">Sign Out</a></li>
+</ul>
 <div class="row" style="margin-bottom: 20px; margin-top: 20px">
     <div class="col s2" style="margin-left: 20px;">
         <ul>
             <li><h3>Menu</h3></li>
         </ul>
         <div class="collection">
-            <a href="#" class="collection-item active-col blue-text">Admin Home</a>
+            <a class="collection-item active-col blue-text">Admin Home</a>
             <a href="item" class="collection-item blue-text">Add Item</a>
             <a href="category" class="collection-item blue-text">Add Category</a>
             <a href="items" class="collection-item blue-text">Items</a>
